force-app/main/default/objects/SEG_Link_TF9__mdt/SEG_Link_TF9__mdt.object-meta.xml
<CustomObject>
    <description>Custom setting que contiene los parametros de la url del link operativo tf9, muestra si esta activo, y la sección donde queremos mostrar se tiene que mostrar.</description>
    <label>SEG_Link_TF9</label>
    <pluralLabel>SEG_Link_TF9s</pluralLabel>
</CustomObject>