force-app/main/default/objects/SEG_Link_TF9__mdt/fields/SEG_Activo__c.field-meta.xml
<CustomField>
    <fullName>SEG_Activo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Comprobación para ver si es Activo</description>
    <label>SEG_Activo</label>
    <type>Checkbox</type>
</CustomField>