force-app/main/default/objects/SEG_Link_TF9__mdt/fields/SEG_Link_Name__c.field-meta.xml
<CustomField>
    <fullName>SEG_Link_Name__c</fullName>
    <description>Campo para establecer la URL a través de texto.</description>
    <label>Link_Name</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>