force-app/main/default/objects/SEG_Link_TF9__mdt/fields/SEG_Orden__c.field-meta.xml
<CustomField>
    <fullName>SEG_Orden__c</fullName>
    <description>Orden</description>
    <label>SEG_Orden</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>