force-app/main/default/objects/SEG_Link_TF9__mdt/fields/SEG_Seccion__c.field-meta.xml
<CustomField>
    <fullName>SEG_Seccion__c</fullName>
    <description>Sección</description>
    <label>SEG_Seccion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>