force-app/main/default/objects/SEG_Link_TF9__mdt/fields/SEG_trazadoNif__c.field-meta.xml
<CustomField>
    <fullName>SEG_trazadoNif__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Trazado para saber si un NIF es necesario en el Link.</description>
    <label>SEG_trazadoNif</label>
    <type>Checkbox</type>
</CustomField>