force-app/main/default/objects/SEG_Link_TF9__mdt/fields/SEG_VisibleDinamica__c.field-meta.xml
<CustomField>
    <fullName>SEG_VisibleDinamica__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para comrpobar si ellink pertenece a MCC</description>
    <label>VisibleDinamica</label>
    <type>Checkbox</type>
</CustomField>