force-app/main/default/objects/SEG_Link_TF9__mdt/listViews/Todos.listView-meta.xml
<ListView>
    <fullName>Todos</fullName>
    <columns>SEG_Orden__c</columns>
    <columns>DeveloperName</columns>
    <columns>MasterLabel</columns>
    <columns>SEG_Activo__c</columns>
    <columns>SEG_Seccion__c</columns>
    <columns>SEG_Link__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
    <language>en_US</language>
</ListView>